--- a/m1c-lannie-common/gradle.properties
+++ b/m1c-lannie-common/gradle.properties
@@ -14,3 +14,24 @@ mybatis_version = 3.4.1
 mybatis_spring_version = 1.3.0
 druid_version = 1.0.25
 mysql_connector_java_version = 6.0.3
+
+
+//update to  maven center
+
+VERSION_NAME=1.0-SNAPSHOT
+VERSION_CODE=1
+GROUP=cn.m1c.lannie
+POM_ARTIFACT_ID=m1c-lannie-common
+POM_NAME=m1c-lannie-common
+POM_PACKAGING=jar
+
+POM_DESCRIPTION=use spring,spring mvc, mybatis, use mongo redis dynamic datasource query by page
+POM_URL=https://github.com/sunqitao/m1c-lannie
+POM_SCM_URL=https://github.com/sunqitao/m1c-lannie
+POM_SCM_CONNECTION=scm:git@github.com/sunqitao/m1c-lannie.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com/sunqitao/m1c-lannie.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=sunqitao
+POM_DEVELOPER_NAME=sunqitao
