退货基础接口

--- a/m1c-lannie-common/gradle.properties
+++ b/m1c-lannie-common/gradle.properties
@@ -18,7 +18,7 @@ mysql_connector_java_version = 6.0.3
 
 //update to  maven center
 
-VERSION_NAME=1.0-SNAPSHOT
+VERSION_NAME=1.1-RELEASE
 VERSION_CODE=1
 GROUP=cn.m1c.lannie
 POM_ARTIFACT_ID=m1c-lannie-common
