--- a/m1c-lannie-common/gradle.properties
+++ b/m1c-lannie-common/gradle.properties
@@ -18,14 +18,14 @@ mysql_connector_java_version = 6.0.3
 
 //update to  maven center
 
-VERSION_NAME=1.0.0-RELEASE
-VERSION_CODE=1.0.0
+VERSION_NAME=1.0.1-RELEASE
+VERSION_CODE=1.0.1
 GROUP=cn.m1c.lannie
 POM_ARTIFACT_ID=m1c-lannie-common
 POM_NAME=m1c-lannie-common
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=use spring,spring mvc, mybatis, use mongo redis dynamic datasource query by page
+POM_DESCRIPTION=add httphelper,web request init userInfo to request
 POM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_CONNECTION=scm:git@github.com/sunqitao/m1c-lannie.git
