--- a/m1c-lannie-common/gradle.properties
+++ b/m1c-lannie-common/gradle.properties
@@ -18,14 +18,14 @@ mysql_connector_java_version = 6.0.3
 
 //update to  maven center
 
-VERSION_NAME=1.0.2-RELEASE
-VERSION_CODE=1.0.2
+VERSION_NAME=1.0.3-RELEASE
+VERSION_CODE=1.0.3
 GROUP=cn.m1c.lannie
 POM_ARTIFACT_ID=m1c-lannie-common
 POM_NAME=m1c-lannie-common
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=change method getSingleEntityKey(Class<? extends T> entityClass, String id) of class CacheKeys 
+POM_DESCRIPTION=add commons-fileupload jar
 POM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_CONNECTION=scm:git@github.com/sunqitao/m1c-lannie.git
