--- a/m1c-lannie-common/build.gradle
+++ b/m1c-lannie-common/build.gradle
@@ -64,6 +64,16 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context-support', version: spring_version
     compile group: 'org.springframework', name: 'spring-test', version: spring_version
     compile group: 'org.springframework', name: 'spring-aspects', version: spring_version
+    
+    // reques param is json  response is json must use down jar
+	compile group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'
+	compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.4'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.1'
+	
+	
+    
+    
 }
 
 
