add request son

--- a/m1c-lannie-app-maven/pom.xml
+++ b/m1c-lannie-app-maven/pom.xml
@@ -14,6 +14,34 @@
 			<artifactId>m1c-lannie-common</artifactId>
 			<version>1.0.4-RELEASE</version>
 		</dependency>
+		
+		
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+    <artifactId>jackson-core-asl</artifactId>
+    <version>1.9.13</version>
+</dependency>
+<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+    <artifactId>jackson-mapper-asl</artifactId>
+    <version>1.9.13</version>
+</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.8.4</version>
+</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.1</version>
+</dependency>
+
+
+
+
+		
 	</dependencies>
 	<build>
 		<finalName>m1c-lannie-app-maven</finalName>
