--- a/m1c-lannie-common/gradle.properties
+++ b/m1c-lannie-common/gradle.properties
@@ -18,14 +18,14 @@ mysql_connector_java_version = 6.0.3
 
 //update to  maven center
 
-VERSION_NAME=1.0.5-RELEASE
-VERSION_CODE=1.0.5
+VERSION_NAME=1.0.6-RELEASE
+VERSION_CODE=1.0.6
 GROUP=cn.m1c.lannie
 POM_ARTIFACT_ID=m1c-lannie-common
 POM_NAME=m1c-lannie-common
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=update PageInterceptor from args = {Connection.class} to args = {Connection.class,Integer.class},init reques param is json response
+POM_DESCRIPTION=add dynamicDataSource
 POM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_CONNECTION=scm:git@github.com/sunqitao/m1c-lannie.git
