--- a/m1c-lannie-common/build.gradle
+++ b/m1c-lannie-common/build.gradle
@@ -1,5 +1,5 @@
 group 'cn.m1c.lannie'
-version '1.0.6-RELEASE'
+version '1.0.6.1-RELEASE'
 
 apply plugin: 'java'
 apply plugin :'maven'//添加Maven插件
@@ -70,10 +70,8 @@ dependencies {
 	compile group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.4'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.1'
+	compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.2'
 	
-	
-    
-    
 }
 
 
