--- a/m1c-lannie-common/gradle.properties
+++ b/m1c-lannie-common/gradle.properties
@@ -6,7 +6,7 @@ aspectjrt_version = 1.8.9
 
 slf4j_version = 1.7.21
 log4j_version = 1.2.17
-fastjson_version = 1.2.16
+fastjson_version = 1.2.31
 httpclient_version = 4.5.2
 spring_data_redis_version = 1.7.2.RELEASE
 jedis_version = 2.9.0
@@ -18,14 +18,14 @@ mysql_connector_java_version = 6.0.3
 
 //update to  maven center
 
-VERSION_NAME=1.0.6.5-RELEASE
-VERSION_CODE=1.0.6.5
+VERSION_NAME=1.0.6.6-RELEASE
+VERSION_CODE=1.0.6.6
 GROUP=cn.m1c.lannie
 POM_ARTIFACT_ID=m1c-lannie-common
 POM_NAME=m1c-lannie-common
 POM_PACKAGING=jar
 
-POM_DESCRIPTION=update httputil
+POM_DESCRIPTION=update fastjson
 POM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_URL=https://github.com/sunqitao/m1c-lannie
 POM_SCM_CONNECTION=scm:git@github.com/sunqitao/m1c-lannie.git
